...
            actions: [
              SizedBox(
                width: kToolbarHeight,
                child: vm.isLoading
                    ? const Padding(padding: EdgeInsets.all(12.0), child: CircularProgressIndicator(strokeWidth: 2))
                    : IconButton(
                        key: const Key('btn_add_scene'),
                        icon: const Icon(Icons.add_outlined),
                        onPressed: () => _showNewSceneScreen(context),
                      ),
              ),
            ],
          ),
...
                  PointerDeviceKind.mouse,
                  PointerDeviceKind.stylus,
                  PointerDeviceKind.unknown,
                },
              ),
              child: ListView.separated(
                key: const Key('scene_list'),
                controller: _scrollController,
                padding: const EdgeInsets.symmetric(horizontal: _horizontalPadding),
                separatorBuilder: (_, _) => const SizedBox(width: _separatorWidth),
                scrollDirection: Axis.horizontal,
                itemCount: scenes.length,
                itemBuilder: (_, index) {
...
